<resources>
    <string name="app_name">Mis Mapas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_ciudades">Ciudades</string>
    <string name="title_activity_playas">Playas</string>
    <string name="seleccionar_opcion">Selecciona una opción</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre">Nombre del alumno</string>
    <string name="ciudades_a_mostrar">Selecciona las ciudades a mostrar</string>

    <!--Nombres de las ciudades-->
    <string name="checkbox1">Ciudad de México</string>
    <string name="checkbox2">Guadalajara</string>
    <string name="checkbox3">Monterrey</string>
    <string name="checkbox4">Apatzingán</string>
    <string name="checkbox5">Queretaro</string>
    <string name="checkbox6">Morelia</string>
    <string name="checkbox7">Toluca</string>
    <string name="checkbox8">Durango</string>
    <string name="checkbox9">Mazatlán</string>
    <string name="checkbox10">Lázaro Cárdenaz</string>

    <!--Nombres de las playas-->
    <string name="checkboxp1">Playa Azul</string>
    <string name="checkboxp2">Cancún</string>
    <string name="checkboxp3">Ixtapa Zihuatanejo</string>
    <string name="checkboxp4">Playa del Carmen</string>
    <string name="checkboxp5">Puerto Vallarta</string>
    <string name="checkboxp6">Playa Paraíso, Tulúm</string>
    <string name="checkboxp7">Rivera Nayarit</string>
    <string name="checkboxp8">Puerto Escondido</string>
    <string name="checkboxp9">Costa Esmeralda</string>
    <string name="checkboxp10">Playa Icacos</string>

    <string name="enviar">Enviar</string>
    <string name="playas_a_mostrar">Selecciona las playas a mostrar</string>

    <!--Array de string spara opciones de inicio-->
    <string-array name="opcionesInicio">
        <item>Ciudad</item>
        <item>Playa</item>
    </string-array>
    <string name="title_activity_mapa2">Map</string>
</resources>
